# tree-sitter-nvmrc

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json5  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Package.swift  README.md  REUSE.toml  THIRD-PARTY-NOTICES.txt  THIRD-PARTY-NOTICES.txt.license  binding.gyp  eslint.config.js  flake.nix  go.mod  go.sum.license  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py  tree-sitter.json  tree-sitter.json.license
.github/workflows/: checks.yaml  publish.yaml  reuse.yaml
LICENSES/: MIT.txt
bindings/c/: tree-sitter-nvmrc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nvmrc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNvmrc/: nvmrc.h
bindings/swift/TreeSitterNvmrcTests/: TreeSitterNvmrcTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  basic.txt.license  boundaries.txt  entries.txt  extras.txt
test/highlight/: boundaries.nvmrc  entries.nvmrc  extras.nvmrc
