[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-nvmrc"
description = "nvmrc grammar for tree-sitter"
version = "0.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "nvmrc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Rishvic Pushpakaran", email = "rishvic@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES.txt"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/rishvic/tree-sitter-nvmrc"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
